==> LeandroMarceddu/STM32F4xx/Src/serial.c <==
#include <string.h>
#include "serial.h"
#include "grbl/hal.h"
#include "grbl/protocol.h"
#include "main.h"
#define SERIAL_MOD 2
#define SERIAL_MOD 1
#define USART usart(SERIAL_MOD)
#define USART_IRQ usartINT(SERIAL_MOD)
#define USART_IRQHandler usartHANDLER(SERIAL_MOD)
#define USART_CLK HAL_RCC_GetPCLK2Freq()
#define USART_CLK HAL_RCC_GetPCLK1Freq()
#define UART2 usart(SERIAL2_MOD)
#define UART2_IRQ usartINT(SERIAL2_MOD)
#define UART2_IRQHandler usartHANDLER(SERIAL2_MOD)
#define UART2_CLK HAL_RCC_GetPCLK2Freq()
#define UART2_CLK HAL_RCC_GetPCLK1Freq()

static bool serialPutC (const char c)
{
    uint16_t next_head = BUFNEXT(txbuf.head, txbuf);    // Get pointer to next free slot in buffer

    while(txbuf.tail == next_head) {                    // While TX buffer full
        if(!hal.stream_blocking_callback())             // check if blocking for space,
            return false;                               // exit if not (leaves TX buffer in an inconsistent state)
    }
    txbuf.data[txbuf.head] = c;                         // Add data to buffer,
    txbuf.head = next_head;                             // update head pointer and
    USART->CR1 |= USART_CR1_TXEIE;                      // enable TX interrupts

    return true;
}

static void serialTxFlush (void)
{
    USART->CR1 &= ~USART_CR1_TXEIE;     // Disable TX interrupts
    txbuf.tail = txbuf.head;
}

static uint16_t serialTxCount (void)
{
    uint32_t tail = txbuf.tail, head = txbuf.head;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + (USART->SR & USART_SR_TC ? 0 : 1);
}

static bool serialSetBaudRate (uint32_t baud_rate)
{
    USART->CR1 = USART_CR1_RE|USART_CR1_TE;
    USART->BRR = UART_BRR_SAMPLING16(USART_CLK, baud_rate);
    USART->CR1 |= (USART_CR1_UE|USART_CR1_RXNEIE);

    return true;
}

static bool serialDisable (bool disable)
{
    if(disable)
        USART->CR1 &= ~USART_CR1_RXNEIE;
    else
        USART->CR1 |= USART_CR1_RXNEIE;

    return true;
}

const io_stream_t *serialInit (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .state.connected = On,
        .read = serialGetC,
        .write = serialWriteS,
        .write_n =  serialWrite,
        .write_char = serialPutC,
        .enqueue_rt_command = serialEnqueueRtCommand,
        .get_rx_buffer_free = serialRxFree,
        .get_rx_buffer_count = serialRxCount,
        .get_tx_buffer_count = serialTxCount,
        .reset_write_buffer = serialTxFlush,
        .reset_read_buffer = serialRxFlush,
        .cancel_read_buffer = serialRxCancel,
        .suspend_read = serialSuspendInput,
        .disable_rx = serialDisable,
        .set_baud_rate = serialSetBaudRate,
        .set_enqueue_rt_handler = serialSetRtHandler
    };

    if(serial[0].flags.claimed)
        return NULL;

    serial[0].flags.claimed = On;

#if SERIAL_MOD == 1

    __HAL_RCC_USART1_CLK_ENABLE();
    __HAL_RCC_GPIOA_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = GPIO_PIN_9|GPIO_PIN_10,
        .Alternate = GPIO_AF7_USART1
    };
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART1,
        .port = GPIOA,
        .pin = 9,
        .mode = { .mask = PINMODE_OUTPUT },
        .description = "UART1"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART1,
        .port = GPIOA,
        .pin = 10,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART1"
    };

#elif SERIAL_MOD == 2

    __HAL_RCC_USART2_CLK_ENABLE();
    __HAL_RCC_GPIOA_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = GPIO_PIN_2|GPIO_PIN_3,
        .Alternate = GPIO_AF7_USART1
    };
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART1,
        .port  = GPIOA,
        .pin   = 2,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART1"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART1,
        .port = GPIOA,
        .pin = 3,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART1"
    };

#elif SERIAL_MOD == 3

    __HAL_RCC_USART3_CLK_ENABLE();
    __HAL_RCC_GPIOD_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = GPIO_PIN_8|GPIO_PIN_9,
        .Alternate = GPIO_AF7_USART3
    };
    HAL_GPIO_Init(GPIOD, &GPIO_InitStructure);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART1,
        .port  = GPIOD,
        .pin   = 8,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART1"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART1,
        .port = GPIOD,
        .pin = 9,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART1"
    };

#else
#error Code has to be added to support serial module 1
#endif

    serialSetBaudRate(baud_rate);

    HAL_NVIC_SetPriority(USART_IRQ, 0, 0);
    HAL_NVIC_EnableIRQ(USART_IRQ);

    hal.periph_port.register_pin(&rx);
    hal.periph_port.register_pin(&tx);

    return &stream;
}

static bool serial2PutC (const char c)
{
    uint32_t next_head = BUFNEXT(txbuf2.head, txbuf2);   // Set and update head pointer

    while(txbuf2.tail == next_head) {           // While TX buffer full
        if(!hal.stream_blocking_callback())     // check if blocking for space,
            return false;                       // exit if not (leaves TX buffer in an inconsistent state)
        UART2->CR1 |= USART_CR1_TXEIE;          // Enable TX interrupts???
    }

    txbuf2.data[txbuf2.head] = c;               // Add data to buffer
    txbuf2.head = next_head;                    // and update head pointer

    UART2->CR1 |= USART_CR1_TXEIE;              // Enable TX interrupts

    return true;
}

static bool serial2Disable (bool disable)
{
    if(disable)
        UART2->CR1 &= ~USART_CR1_RXNEIE;
    else
        UART2->CR1 |= USART_CR1_RXNEIE;

    return true;
}

const io_stream_t *serial2Init (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .instance = 1,
        .state.connected = On,
        .read = serial2GetC,
        .write = serial2WriteS,
        .write_n =  serial2Write,
        .write_char = serial2PutC,
        .enqueue_rt_command = serial2EnqueueRtCommand,
        .get_rx_buffer_free = serial2RxFree,
        .get_rx_buffer_count = serial2RxCount,
        .get_tx_buffer_count = serial2TxCount,
        .reset_write_buffer = serial2TxFlush,
        .reset_read_buffer = serial2RxFlush,
        .cancel_read_buffer = serial2RxCancel,
        .suspend_read = serial2SuspendInput,
        .disable_rx = serial2Disable,
        .set_baud_rate = serial2SetBaudRate,
        .set_enqueue_rt_handler = serial2SetRtHandler
    };

    if(serial[1].flags.claimed)
        return NULL;

    serial[1].flags.claimed = On;

#if SERIAL2_MOD == 1

    __HAL_RCC_USART1_CLK_ENABLE();
    __HAL_RCC_GPIOA_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = GPIO_PIN_9|GPIO_PIN_10,
        .Alternate = GPIO_AF7_USART1
    };
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART2,
        .port = GPIOA,
        .pin = 9,
        .mode = { .mask = PINMODE_OUTPUT },
        .description = "UART2"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART2,
        .port = GPIOA,
        .pin = 10,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART2"
    };

#elif SERIAL2_MOD == 2

    __HAL_RCC_USART2_CLK_ENABLE();
    __HAL_RCC_GPIOA_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = GPIO_PIN_2|GPIO_PIN_3,
        .Alternate = GPIO_AF7_USART1
    };
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART2,
        .port  = GPIOA,
        .pin   = 2,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART2"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART2,
        .port = GPIOA,
        .pin = 3,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART2"
    };

#elif SERIAL2_MOD == 3

#if defined(BOARD_FLEXI_HAL)

    UART_HandleTypeDef huart3;

    __HAL_RCC_USART3_CLK_ENABLE();
    __HAL_RCC_GPIOC_CLK_ENABLE();

    huart3.Instance = USART3;
    huart3.Init.BaudRate = 115200;
    huart3.Init.WordLength = UART_WORDLENGTH_8B;
    huart3.Init.StopBits = UART_STOPBITS_1;
    huart3.Init.Parity = UART_PARITY_NONE;
    huart3.Init.Mode = UART_MODE_TX_RX;
    huart3.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    huart3.Init.OverSampling = UART_OVERSAMPLING_16;
    if (HAL_UART_Init(&huart3) != HAL_OK)
    {
        Error_Handler();
    }

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode = GPIO_MODE_AF_PP,
        .Pull = GPIO_NOPULL,
        .Speed = GPIO_SPEED_FREQ_LOW,
        .Pin = GPIO_PIN_5|GPIO_PIN_10,
        .Alternate = GPIO_AF7_USART3
    };
    HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);

    HAL_NVIC_SetPriority(USART3_IRQn, 0, 0);
    HAL_NVIC_EnableIRQ(USART3_IRQn);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART2,
        .port = GPIOC,
        .pin = 10,
        .mode = { .mask = PINMODE_OUTPUT },
        .description = "UART2"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART2,
        .port = GPIOC,
        .pin = 5,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART2"
    };

#else

    __HAL_RCC_USART3_CLK_ENABLE();
    __HAL_RCC_GPIOD_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = GPIO_PIN_8|GPIO_PIN_9,
        .Alternate = GPIO_AF7_USART3
    };
    HAL_GPIO_Init(GPIOD, &GPIO_InitStructure);

    static const periph_pin_t tx = {
        .function = Output_TX,
        .group = PinGroup_UART2,
        .port  = GPIOD,
        .pin   = 8,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART2"
    };

    static const periph_pin_t rx = {
        .function = Input_RX,
        .group = PinGroup_UART2,
        .port = GPIOD,
        .pin = 9,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART2"
    };
#endif
#else
#error Code has to be added to support serial module 2
#endif

    serial2SetBaudRate(baud_rate);

    HAL_NVIC_SetPriority(UART2_IRQ, 0, 0);
    HAL_NVIC_EnableIRQ(UART2_IRQ);

    hal.periph_port.register_pin(&rx);
    hal.periph_port.register_pin(&tx);

    return &stream;
}
